<resources>
    <string name="app_name">test</string>
    <string name="newto">New to GamersCasino?</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="register_now">Register now!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="let_s_get_started">Let\'s Get started!</string>
    <string name="oops_forgot_pssword">Oops! forgot pssword?</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contact_us">Contact us</string>
    <string name="home">Home</string>
    <string name="casino">Casino</string>
    <string name="sports">Sports</string>
    <string name="account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transcations">Transcations</string>
    <string name="wallet">Wallet</string>
    <string name="change_password">Change Password</string>
    <string name="live_support">Live Support</string>
    <string name="logout">Logout</string>
    <string name="your_wallet">Your Wallet</string>
    <string name="_00_00">$00.00</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawl">Withdrawl</string>
    <string name="originals">Originals</string>
    <string name="scale_of_fate">Scale Of fate</string>
    <string name="multiplier">Multiplier</string>
    <string name="bet">Bet</string>
    <string name="amount">Amount</string>
    <string name="game_history">Game History</string>
</resources>