<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark2"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow">

        </ImageView>
<TextView
    android:layout_width="match_parent"
    android:id="@+id/txt_welcome"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:padding="8dp"
    android:fontFamily="@font/notosans"
    android:layout_marginLeft="10dp"
    android:textSize="16sp"
    android:textColor="@color/white"
    android:text="@string/welcome_back">

</TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:id="@+id/bg"
        android:layout_margin="10dp"
        android:orientation="vertical"

       >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:id="@+id/l_email"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/dark2">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/email"
                android:padding="10dp">

            </ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_email"
                android:textSize="12sp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:fontFamily="@font/notosans"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/l_pass"
            android:padding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/dark2">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/pass"
                android:padding="10dp">

            </ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_pass"
                android:textSize="12sp"
                android:fontFamily="@font/notosans"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:hint="@string/enter_password"
                android:textColorHint="@color/gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/l_pass2"
            android:padding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/dark2">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/confirm"
                android:padding="10dp">

            </ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_pass2"
                android:inputType="textPassword"
                android:textSize="12sp"
                android:fontFamily="@font/notosans"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:id="@+id/l_number"
            android:padding="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/dark2">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitCenter"
                android:src="@drawable/phone"
                android:padding="10dp">

            </ImageView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_number"
                android:textSize="12sp"
                android:background="@android:color/transparent"
                android:textColor="@color/white"
                android:inputType="number"
                android:fontFamily="@font/notosans"
                android:hint="@string/enter_phone_number"
                android:textColorHint="@color/gray"/>
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/main"
            android:id="@+id/btnlogin"
            android:text="Login"
            android:fontFamily="@font/notosans"
            android:textColor="@color/white"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="0dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_forgot"
           android:padding="10dp"
            android:textColor="@color/main"
            android:fontFamily="@font/notosans"
            android:textSize="12sp"
            android:text="@string/forgot_password"
            ></TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_reg"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:fontFamily="@font/notosans"
                android:paddingBottom="10dp"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:text="@string/newto"
                ></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_acc"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/main"
                android:fontFamily="@font/notosans"
                android:textSize="12sp"
                android:text="@string/register_now"
                ></TextView>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>