<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark3"
    android:orientation="vertical"
    android:padding="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark2"
        android:padding="8dp"
        android:layout_margin="10dp"
        android:id="@+id/l_wallet"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray"
            android:textSize="12dp"
            android:padding="8dp"
            android:layout_marginStart="10dp"
            android:text="@string/your_wallet"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:gravity="center_vertical"
            android:background="@drawable/roundcorners"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/wallet"
                android:scaleType="fitCenter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:padding="8dp"
                android:id="@+id/txt_blnc"
                android:text="@string/_00_00"
                android:textColor="@color/main"/>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:orientation="horizontal"
 >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/deposit"
                android:textSize="12dp"
                android:id="@+id/btn_deposit"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/withdrawl"
                android:textSize="12dp"
                android:id="@+id/btn_withdraw"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@color/main"
                android:padding="8dp"
                android:text="Deposit History"
                android:id="@+id/txt_deposit_history"
                android:textColor="@color/white"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark2"
                android:padding="8dp"
                android:id="@+id/txt_withdrawalhistory"
                android:text="Withdrawal History"
                android:textColor="@color/white"></TextView>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>